--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
         <main>
             <div id = "calculator-container">
                 <div id = "display">
-                    <div id = "display-1">DISPLAY 1!</div>
-                    <div id = "display-2">DISPLAY 2!</div>
+                    <div id = "display-1"></div>
+                    <div id = "display-2"></div>
                 </div>
                 <div id = "buttons">
-                    <button id = "unary">+/-</button>
-                    <button id = "√">√</button>
-                    <button id = "all-clear">AC</button>
-                    <button id = "/">/</button>
+                    <button id = "unary" class = "operation">+/-</button>
+                    <button id = "√" class = "operation">√</button>
+                    <button id = "AC" class = "operation">AC</button>
+                    <button id = "/" class = "operation">/</button>
 
                     <button id = "7">7</button>
                     <button id = "8">8</button>
                     <button id = "9">9</button>
-                    <button id = "x">x</button>
+                    <button id = "x" class = "operation">x</button>
 
                     <button id = "4">4</button>
                     <button id = "5">5</button>
                     <button id = "6">6</button>
-                    <button id = "-">-</button>
+                    <button id = "-" class = "operation">-</button>
 
                     <button id = "1">1</button>
                     <button id = "2">2</button>
                     <button id = "3">3</button>
-                    <button id = "+">+</button>
+                    <button id = "+" class = "operation">+</button>
 
                     <button id = ".">.</button>
                     <button id = "0">0</button>
                     <button id = "clear">C</button>
-                    <button id = "=">=</button>
+                    <button id = "=" class = "operation">=</button>
                 </div>
             </div>
         </main>
