--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>PRGCalculator</title>
+        <title>Odin-Calculator</title>
         <link rel="stylesheet" href="stylesheets/reset.css" type="text/css" media="all"/>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" media="all"/>
     </head>
@@ -10,7 +10,7 @@
         <main>
             <div id = "calculator-container">
                 <div id = "display">
-                    <div id = "display-1"></div>
+                    <!-- <div id = "display-1"></div> -->
                     <div id = "display-2"></div>
                 </div>
                 <div id = "buttons">
@@ -40,6 +40,24 @@
                     <button id = "=" class = "operation">=</button>
                 </div>
             </div>
+            <div id = "keyboard-support">
+                <h1>Keyboard Support</h1> <br>
+                    <h3>Numbers: 0 - 9 <br>
+                    <br>Operations: <br> 
+                        <h4> W: Square root<br>
+                             \: Divide<br>
+                             x: Multiply<br>
+                             -: Subtract<br>
+                             +: Add <br><br></h4>
+
+                        <h3>Other Functions: <br></h3>
+                        <h4>p: +/-<br>
+                            enter: Solve<br>
+                            space: All Clear <br>
+                            backspace: Clear <br>
+                        </h4>
+                
+            </div>
         </main>
     <!-- <footer>
         <a href="https://github.com/prguevarra">created by prguevarra</a> 
@@ -47,3 +65,6 @@
     <script src="script.js"></script>
     </body> 
 </html> 
+
+<!-- //keyboard: -: unary; W: √; space: AC; enter: =
+//keyboard: ]: /; x; -; +; .; backspace: clear -->
