--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <main>
             <div id = "calculator-container">
                 <div id = "display">
-                    <!-- <div id = "display-1"></div> -->
+                    <div id = "display-1"></div>
                     <div id = "display-2"></div>
                 </div>
                 <div id = "buttons">
