--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Odin-Calculator</title>
         <link rel="stylesheet" href="stylesheets/reset.css" type="text/css" media="all"/>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" media="all"/>
